# deep_novel_typer

./: .gitignore  LICENSE  README.md
backend/: environment.yml  pyproject.toml
backend/app/: __init__.py
backend/app/APIs/: __init__.py  dependencies.py  error_handlers.py  main.py
backend/app/Schemas/: __init__.py  api_configs.py  chapters.py  chat.py  chat_session.py  common.py  (+17 more)
backend/config/: generation.yaml  llm.yaml
backend/tests/: conftest.py  fakes.py  service_factories.py  test_api_config_service.py  test_chapter_docx_export_service.py  test_chapter_service.py  test_chat_service.py  test_chat_session_service.py  test_debug_log_service.py  test_document_service.py  test_embedding_cache_runtime.py  test_embedding_clusters.py  test_embedding_debug_logs.py  test_embedding_isolation.py  test_embedding_runtime_resources.py  test_embedding_segmentation.py  test_embedding_service.py  test_error_handlers.py  test_generation_blueprint_service.py  test_generation_document_service.py  test_generation_draft_service.py  test_generation_polish_service.py  test_generation_presets_service.py  test_llm_client.py  test_llm_config.py  test_llm_context_budget.py  test_model_request_queue_service.py  test_project_service.py  test_project_transfer_service.py  test_prompt_preview_service.py  test_prompt_profile_service.py  test_resource_save_routes.py  test_search_service.py  test_structured_outputs.py  test_suggestion_queue_service.py  test_suggestion_service.py  test_suggestion_service_errors.py  test_suggestion_service_resilience.py  test_text_utils.py  test_tree_utils.py  (+2 more)
(+418 files in other folders)
