[project]
name = "deep-novel-typer-backend"
version = "0.1.0"
description = "Python backend for a project-based AI assisted novel typing workspace."
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.20.0",
  "chromadb==1.5.9",
  "fastapi>=0.115.0",
  "jieba==0.42.1",
  "openai>=1.60.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "uvicorn[standard]>=0.32.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
